finished Start component with working button which disable showing component

--- a/src/styles/_start.scss
+++ b/src/styles/_start.scss
@@ -5,11 +5,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 3rem;
-    border: 2px solid violet;
+    margin-top: 30rem;
+    // border: 2px solid violet;
     border-radius: 4rem;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    
+    // box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    // box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+    // box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    background: transparent linear-gradient(180deg, #FFDD00 0%, #FFB300 100%) 0% 0% no-repeat padding-box;
+
     .start__header {
         font-size: 7rem;
         font-weight: bold;
@@ -32,5 +36,15 @@
 
     .start__btn {
         margin: 3rem 0 3rem 0;
+        width: 20rem;
+        height: 3rem;
+        border-radius: 2rem;
+        background-color: lightgrey;
+        font-weight: bold;
+        border: none;
     }
+}
+
+.start__btn:hover {
+    cursor: pointer;
 }
