--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -5,6 +5,7 @@ html {
     height: 100vh;
     border: 5px solid green;
     font-family: 'Courier New', Courier, monospace;
+    // background-color: yellow;
   }
   
   *, *:before, *:after {
